--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div id="banner">
     <div class="logo">
-      <img src="./assets/logo/logo_gif.gif" alt="logo" width="100px" />
+<!--       <img src="./assets/logo/logo_gif.gif" alt="logo" width="100px" /> -->
     </div>
     <div class="download-button">
       <button class="download" class="download-img">
